Add ShuhoDataPrint Lightning Page

--- a/remics-test1/force-app/main/default/classes/DonationDaoTest.cls
+++ b/remics-test1/force-app/main/default/classes/DonationDaoTest.cls
@@ -3,44 +3,94 @@ public with sharing class DonationDaoTest {
 
     @testSetup
     static void setup() {
-        Person__c p = new Person__c(
-            Name = '佐藤一郎',
-            PersonType__c = '現住陪餐会員',
-            FamilyName__c = '佐藤',
-            ForeName__c = '一郎',
-            FamilyNameFurigana__c = 'さとう',
-            ForeNameFurigana__c = 'いちろう',
-            RelationshipFromHouseholder__c = '本人',
-            DonationUnitClass__c = '個人'
-        );
-        insert p;
 
-        Donation__c d = new Donation__c(
-            DonationDate__c = Date.newInstance(2022, 12, 1),
-            DonationStartDate__c = Date.newInstance(2022, 12, 1),
-            DonationFinishDate__c = Date.newInstance(2023, 1, 31),
-            Donor__c = p.Id,
-            DonationAmount__c = 10000,
-            DonationType__c = '月次献金'
-        );
-        insert d;
+        // 人レコード(教会員)の作成
+        List<Person__c> pList = new List<Person__c>();
+        for (Integer i = 0; i < 4; i++) {
+            Person__c p = new Person__c(
+                Name = '佐藤一郎' + String.valueOf(i),
+                PersonType__c = '現住陪餐会員',
+                FamilyName__c = '佐藤',
+                ForeName__c = '一郎' + i,
+                FamilyNameFurigana__c = 'さとう',
+                ForeNameFurigana__c = 'いちろう' + String.valueOf(i),
+                RelationshipFromHouseholder__c = '本人',
+                DonationUnitClass__c = '個人'
+            );
+            pList.add(p);
+        }
+        insert pList;
+
+        // 献金単位区分=「夫婦」の人レコードの作成
+        Person__c pHusband = pList[1];
+        Person__c pWife = pList[2];
+        
+        pHusband.DonationUnitClass__c = '夫婦';
+        pHusband.Spouse__c = pWife.Id;
+
+        pWife.Name = '佐藤妻子2';
+        pWife.ForeName__c = '妻子2';
+        pWife.DonationUnitClass__c = '夫婦';
+        pWife.Spouse__c = pHusband.Id;
+        pWife.RelationshipFromHouseholder__c = '配偶者';
+
+        // 会員区分=「非会員」の人レコードの作成
+        Person__c pHikaiin = pList[3];
+        pHikaiin.PersonType__c = '非会員';
+        
+        update pList;
+
+        List<Donation__c> dList = new List<Donation__c>();
+        
+        // 献金レコードの作成
+        for(Person__c p : pList){
+            // 献金単位区分=「夫婦」の場合、その配偶者が単独で献金するケースはないので除外する
+            if(p.Id == pWife.Id){
+                continue;
+            }
+
+            Donation__c dGetsuji = new Donation__c(
+                DonationDate__c = Date.newInstance(2022, 12, 1),
+                DonationStartDate__c = Date.newInstance(2022, 12, 1),
+                DonationFinishDate__c = Date.newInstance(2023, 1, 31),
+                Donor__c = p.Id,
+                DonationAmount__c = 10000,
+                DonationType__c = '月次献金'
+            );
+            Donation__c dToki = new Donation__c(
+                DonationDate__c = Date.newInstance(2022, 12, 15),
+                Donor__c = p.Id,
+                DonationAmount__c = 20000,
+                DonationType__c = '冬季特別献金',
+                DonationNote__c = '感謝'
+            );
+            Donation__c dAsa = new Donation__c(
+                DonationDate__c = Date.newInstance(2022, 12, 31),
+                Donor__c = p.Id,
+                DonationAmount__c = 30000,
+                DonationType__c = '朝礼拝'
+            );
+            dList.add(dGetsuji);
+            dList.add(dToki);
+            dList.add(dAsa);
+        }
+        insert dList;
     }
 
     @isTest
     static void getDonationsByDonorIdTest() {
-        Person__c p = [SELECT Id, Name FROM Person__c LIMIT 1];
+        Person__c p = [SELECT Id, Name FROM Person__c WHERE Name = '佐藤一郎1' LIMIT 1];
         Date dateFrom = Date.newInstance(2022, 12, 1);
         Date dateTo = Date.newInstance(2022, 12, 31);
         List<Donation__c> dList = DonationDao.getDonationsByDonorId(p.Id, dateFrom, dateTo);
 
         Test.startTest();
-        System.assertEquals(1, dList.size(), 'DonationDaoTest.getDonationsByDonorIdTest Error');
+        System.assertEquals(3, dList.size(), 'DonationDaoTest.getDonationsByDonorIdTest Error');
         Test.stopTest();
     }
 
     @isTest
-    static void getDonationsByDonorIdTest_Null() {
-        Person__c p = [SELECT Id, Name FROM Person__c LIMIT 1];
+    static void getDonationsByDonorIdNullTest() {
         Date dateFrom = Date.newInstance(2022, 12, 1);
         Date dateTo = Date.newInstance(2022, 12, 31);
         List<Donation__c> dList = DonationDao.getDonationsByDonorId(null, dateFrom, dateTo);
@@ -51,8 +101,30 @@ public with sharing class DonationDaoTest {
     }
 
     @isTest
+    static void getDonationsByDateTest() {
+        Date dateFrom = Date.newInstance(2022, 12, 1);
+        Date dateTo = Date.newInstance(2022, 12, 31);
+        List<Donation__c> dList = DonationDao.getDonationsByDate(dateFrom, dateTo);
+
+        Test.startTest();
+        System.assertEquals(6, dList.size(), 'DonationDaoTest.getDonationsByDateTest Error');
+        Test.stopTest();
+    }
+
+    @isTest
+    static void getDonationsByDateAggregateTest() {
+        Date dateFrom = Date.newInstance(2022, 12, 1);
+        Date dateTo = Date.newInstance(2022, 12, 31);
+        List<AggregateResult> dList = DonationDao.getDonationsByDateAggregate(dateFrom, dateTo);
+
+        Test.startTest();
+        System.assertEquals(6, dList.size(), 'DonationDaoTest.getDonationsByDateAggregate Error');
+        Test.stopTest();
+    }
+
+    @isTest
     static void updateDonationsTest() {
-        Person__c p = [SELECT Id, Name FROM Person__c LIMIT 1];
+        Person__c p = [SELECT Id, Name FROM Person__c WHERE Name = '佐藤一郎1' LIMIT 1];
         Date dateFrom = Date.newInstance(2022, 12, 1);
         Date dateTo = Date.newInstance(2022, 12, 31);
         List<Donation__c> dList = DonationDao.getDonationsByDonorId(p.Id, dateFrom, dateTo);
@@ -63,7 +135,7 @@ public with sharing class DonationDaoTest {
         List<Donation__c> newDList = DonationDao.getDonationsByDonorId(p.Id, dateFrom, dateTo);
 
         Test.startTest();
-        System.assertEquals(1, newDList.size(), 'DonationDaoTest.updateDonations Size Error');
+        System.assertEquals(3, newDList.size(), 'DonationDaoTest.updateDonations Size Error');
         System.assertEquals('2022/12/15', newDList[0].DonationDate__c.format(), 'DonationDaoTest.updateDonations DonationDate__c Error');
         System.assertEquals('new value', newDList[0].DonationNote__c, 'DonationDaoTest.updateDonations DonationNote__c Error');
         Test.stopTest();
@@ -71,7 +143,7 @@ public with sharing class DonationDaoTest {
 
     @isTest
     static void deleteDonationByIdTest() {
-        Person__c p = [SELECT Id, Name FROM Person__c LIMIT 1];
+        Person__c p = [SELECT Id, Name FROM Person__c WHERE Name = '佐藤一郎1' LIMIT 1];
         Date dateFrom = Date.newInstance(2022, 12, 1);
         Date dateTo = Date.newInstance(2022, 12, 31);
         List<Donation__c> dList = DonationDao.getDonationsByDonorId(p.Id, dateFrom, dateTo);
@@ -81,7 +153,7 @@ public with sharing class DonationDaoTest {
         List<Donation__c> deletedDList = DonationDao.getDonationsByDonorId(p.Id, dateFrom, dateTo);
 
         Test.startTest();
-        System.assertEquals(0, deletedDList.size(), 'DonationDaoTest.deleteDonationByIdTest Error');
+        System.assertEquals(2, deletedDList.size(), 'DonationDaoTest.deleteDonationByIdTest Error');
         System.assert(msg.contains('DonationDao#deleteDonationById Done Successfully'), 'DonationDaoTest.deleteDonationByIdTest Error');
         Test.stopTest();
     }
